templates/pet-battle-tournament_template.yaml
---
# Source: pet-battle-tournament/templates/mongodb-persistent.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: mongodb://{.spec.clusterIP}:{.spec.ports[?(.name=="mongo")].port}
  name: release-name-mongodb
  labels:
    helm.sh/chart: pet-battle-tournament-1.0.40
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "gha-master"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: petbattleworld
spec:
  ports:
  - name: mongo
    nodePort: 0
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: release-name
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
# Source: pet-battle-tournament/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pet-battle-tournament
  labels:
    helm.sh/chart: pet-battle-tournament-1.0.40
    app.kubernetes.io/part-of: petbattleworld
    app.kubernetes.io/name: pet-battle-tournament
    app.kubernetes.io/component: pet-battle-tournament
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: tcp-8080
    - port: 8443
      protocol: TCP
      targetPort: 8443
      name: tcp-8443
  selector:
    app.kubernetes.io/name: pet-battle-tournament
    app.kubernetes.io/component: pet-battle-tournament
    app.kubernetes.io/instance: release-name
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
# Source: pet-battle-tournament/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pet-battle-tournament
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"release-name-pet-battle-tournament:gha-master"},"fieldPath":"spec.template.spec.containers[?(@.name==\"pet-battle-tournament\")].image"}]'
  labels:
    helm.sh/chart: pet-battle-tournament-1.0.40
    app.kubernetes.io/part-of: petbattleworld
    app.kubernetes.io/name: pet-battle-tournament
    app.kubernetes.io/component: pet-battle-tournament
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
        app.kubernetes.io/name: pet-battle-tournament
        app.kubernetes.io/component: pet-battle-tournament
        app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8080'
        rollme: "kTBvl"
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: pet-battle-tournament
        app.kubernetes.io/component: pet-battle-tournament
        app.kubernetes.io/instance: release-name
    spec:
      containers:
        - env:
            - name: JAVA_OPTIONS
              value: -Dquarkus.infinispan-client.trust-store=/deployments/config/truststore.jks -Djavax.net.ssl.trustStore=/deployments/config/truststore.jks -Djavax.net.ssl.trustStorePassword=jkspassword
            - name: OIDCVAR
              valueFrom:
                secretKeyRef:
                  key: CLIENT_SECRET
                  name: keycloak-client-secret-pbserver
            - name: DATABASE_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-admin-password
                  name: release-name-mongodb
            - name: DATABASE_NAME
              valueFrom:
                secretKeyRef:
                  key: database-name
                  name: release-name-mongodb
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: release-name-mongodb
            - name: DATABASE_USER
              valueFrom:
                secretKeyRef:
                  key: database-user
                  name: release-name-mongodb
            - name: DATABASE_SERVICE_HOST
              value: release-name-mongodb
            - name: DATABASE_SERVICE_PORT
              value: '27017'
            - name: INFINISPAN_SERVICE_HOST
              value: infinispan
            - name: INFINISPAN_SERVICE_PORT
              value: '11222'
            - name: INFINISPAN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: INFINISPAN_PASSWORD
                  name: infinispan-auth
            - name: INFINISPAN_REALM
              value: default
            - name: INFINISPAN_USER
              valueFrom:
                secretKeyRef:
                  key: INFINISPAN_USER
                  name: infinispan-auth
            - name: QUARKUS_PROFILE
              value: prod
          image: ' '
          imagePullPolicy: Always
          name: pet-battle-tournament
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /deployments/config/
              name: javatruststore
              readOnly: true
            - mountPath: /tmp/secrets/keycloak
              name: pbsecretkeycloak
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pbsecretkeycloak
          secret:
            defaultMode: 384
            optional: false
            secretName: keycloak-client-secret-pbserver
        - configMap:
            defaultMode: 384
            name: java-truststore
            optional: false
          name: javatruststore
---
# Source: pet-battle-tournament/templates/mongodb-persistent.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: "true"
  name: release-name-mongodb
  labels:
    helm.sh/chart: pet-battle-tournament-1.0.40
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "gha-master"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: petbattleworld
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: release-name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        app.kubernetes.io/component: mongodb
        app.kubernetes.io/instance: release-name
    spec:
      containers:
      - env:
        - name: MONGODB_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: release-name-mongodb
        - name: MONGODB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: release-name-mongodb
        - name: MONGODB_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-admin-password
              name: release-name-mongodb
        - name: MONGODB_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: release-name-mongodb
        image: ' '
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 30
          tcpSocket:
            port: 27017
          timeoutSeconds: 1
        name: mongodb
        ports:
        - containerPort: 27017
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - mongo 127.0.0.1:27017/$MONGODB_DATABASE -u $MONGODB_USER -p $MONGODB_PASSWORD
              --eval="quit()"
          initialDelaySeconds: 3
          timeoutSeconds: 1
        resources:
          limits:
            memory: 512Mi
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /var/lib/mongodb/data
          name: mongodb-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: release-name-mongodb
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - mongodb
      from:
        kind: ImageStreamTag
        name: "mongodb:3.6"
        namespace: openshift
      lastTriggeredImage: ""
    type: ImageChange
  - type: ConfigChange
---
# Source: pet-battle-tournament/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: release-name-pet-battle-tournament
  labels:
    helm.sh/chart: pet-battle-tournament-1.0.40
    app.kubernetes.io/part-of: petbattleworld
    app.kubernetes.io/name: pet-battle-tournament
    app.kubernetes.io/component: pet-battle-tournament
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  port:
    targetPort: tcp-8080
  to:
    kind: Service
    name: release-name-pet-battle-tournament
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
---
# Source: pet-battle-tournament/charts/pet-battle-infra/templates/wait-for-crd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cluster-check 
  annotations:
    "helm.sh/hook": post-install,post-upgrade
    "helm.sh/hook-weight": "-1"
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: crd-check 
    image: quay.io/openshift/origin-cli:4.8
    imagePullPolicy: IfNotPresent
    command: ['sh', '-c', 'while [ true ]; do oc get crd keycloakrealms.keycloak.org grafanadashboards.integreatly.org infinispans.infinispan.org; if [ $? -eq 0 ]; then break; fi ; sleep 5s; done']
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
  serviceAccount: default
  serviceAccountName: default
